# bank-template-processing

./: .gitignore  AGENTS.md  CLAUDE.md  CONFIG.md  README.md  bank_template_processing.spec  config.example.json  config.json  config_loader.py  excel_reader.py  excel_writer.py  main.py  pyproject.toml  pytest.ini  run_for_pyinstaller.py  template_selector.py  transformer.py  validator.py  配置文件说明.md
.github/workflows/: quality.yml
.sisyphus/: boulder.json
.sisyphus/plans/: bank-card-template-processing.en.md  bank-card-template-processing.md  filename-pattern.md  python-best-reffix-src-structure.md  standardize-project.md
fixtures/: integration_config.json  integration_input.xlsx  integration_special_template.xlsx  integration_template.xlsx
scripts/: build_windows.bat  build_windows.ps1  check_branch_coverage.py
skills/xlsx/: recalc.py
src/bank_template_processing/: AGENTS.md  config_loader.py  config_types.py  excel_reader.py  excel_writer.py  main.py  merge_folder.py  pipeline.py  sheet_utils.py  template_selector.py  transformer.py  validator.py
templates/: complex_template.xlsx  example_special_template.xlsx  example_template.xlsx
templates.example/: README.md
tests/: AGENTS.md  config_factories.py  conftest.py  spreadsheet_factories.py  test_branch_coverage_script.py  test_chinese_column_bug.py  test_chinese_column_integration.py  test_config_loader.py  test_config_loader_edge_cases.py  test_docs_sync.py  test_error_context.py  test_excel_reader.py  test_excel_reader_error_paths.py  test_excel_reader_formula.py  test_excel_writer.py  test_excel_writer_consistency.py  test_excel_writer_error_paths.py  test_filename_stats.py  test_integration.py  test_main.py  test_main_runtime_paths.py  test_merge_folder.py  test_merge_folder_edge_cases.py  test_module_entrypoint.py  test_pipeline.py  test_properties.py  test_sheet_utils.py  test_template_selector.py  test_transformer.py  test_validator.py  test_validator_edge_cases.py
(+16 files in other folders)
