[project]
name = "bank-template-processing"
version = "0.1.0"
description = "处理OA系统审批流程中的数据，将数据处理为银行模版对应的格式"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.0.0",
    "pillow>=12.1.0",
    "xlrd>=2.0.0",
    "xlutils>=2.0.0",
    "xlwt>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.120.0",
]

[project.scripts]
bank-process = "bank_template_processing.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-config --strict-markers --cov=src --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml --cov-fail-under=92"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 92
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.120.0",
    "ty>=0.0.14",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.18.0",
    "ruff>=0.14.14",
]
